# tapestry

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docs-requirements.txt  index.html  mkdocs.yml
.github/workflows/: release.yml  tests_and_checks.yml
defaults/: manifest.toml.jinja  pg_format.config  sql-formatter.config.json  sqlfluff.config
docker/: Dockerfile  README.md  run-tests
docs/: index.md  rationale.md
docs/user-guide/: cd-ci.md  commands.md  docker.md  formatting.md  getting-started.md  index.md  install.md  layouts.md  manifest.md  naming-conventions.md  pg-format.md  query-tags.md  query-templates.md  sql-formatter.md  sqlfluff.md  sqlformat-rs.md  test-templates.md
examples/: manifest.toml
examples/chinook/: README.md  manifest.toml  run-tapestry  tapestry.toml
examples/chinook_old/: run-tapestry  tapestry.toml
examples/sql/: artists_long_songs_test.sql.j2  songs_ps_test.sql  songs_test.sql  songs_test.sql.j2
notes/: manual_testing.md  publishing_docs.md
rationale/: index.html
scripts/: gh-build
search/: search_index.json
src/: command.rs  error.rs  logging.rs  main.rs  metadata.rs  output.rs  placeholder.rs  query.rs  query_template.rs  render.rs  rendering.rs  scaffolding.rs  sql_format.rs  tagging.rs  test_template.rs  toml.rs  util.rs  validation.rs
templates/: manifest_default.toml
user-guide/: cd-ci.md~  formatting.md~  index.html  install.md~  layouts.md~  naming-conventions.md~  pg-format.md~  query-templates.md~  sql-formatter.md~  sqlfluff.md~  sqlformat-rs.md~  test-templates.md~
(+46 files in other folders)
