[package]
name = "tapestry"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
env_logger = "0.11.3"
inquire = "0.7.5"
log = "0.4.21"
minijinja = { version = "1.0.15", features = ["loader"] }
regex = "1.10.4"
serde = { version = "1.0.201", features = ["derive"] }
sqlformat = "0.2.4"
toml = "0.8.12"
